src/css/weapons.css
/* Default (Mobile) */

.weapons-list {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.search-result {
    list-style-type: none;
    min-width: 100%;
    max-width: 100%;
    text-align: center;
}

.search-details {
    background-color: white;
    margin: 20px;
    min-height: 540px;
    box-shadow: -1px 1px 1px 1px #ccc;
    border-radius:3px;
}

.search-result__image-column {
    vertical-align: top;
}

.search-result__details-column {
    max-width: 300px;
}

.search-result__image {
    width: 220px;
    height: 220px;
}

.result-details__title {
    text-decoration: none;
}

.result-details__title-header {
    color: #9d0a0e;
    margin-top: 0;
    margin-bottom: 4px;
    padding-top: 20px;
    height: 60px;
}

.result-details__info__cost {
    font-size: 14px;
}

.result_details__info__specifics {
    width: 100%;
    overflow: hidden;
    /*padding: 0 44px 0;*/
    margin: 20px 44px;
    text-align: left;
}

.result_details__info__specifics dd,
.result_details__info__specifics dt {
    font-family: Arial;
    font-size: 28px;
}

.result_details__info__specifics dt {
    float: left;
    width: 50%;
    padding: 0;
    margin: 0
}

.result_details__info__specifics dd {
    float: left;
    width: 50%;
    padding: 0;
    margin: 0
}

.buy-button {
    border-radius:5px;
    background-color: #9d0a0e;
    color:white;
    font-size: 36px;
    transition-duration: 0.4s;
}

.buy-button:hover {
    background-color:#ff0303;
    color:white;
}

.buy-button:focus {
    outline:0;
}

.critical-failure {
    text-align: center;
    margin: 100px;
}

.critical-failure img {
    box-shadow: -1px 1px 1px 1px #ccc;
    border-radius:3px;
}

/* > large mobile */
@media (min-width: 451px) {
    .search-result {
        min-width: 100%;
        max-width: 300px;
    }
}


/* > 2 tiles */
@media (min-width: 673px) {
    .search-result {
        min-width: 50%;
    }
}

/* > 3 tiles */
@media (min-width: 973px) {
    .search-result {
        min-width: 33%;
    }
}

/* > 4 tiles */
@media (min-width: 1273px) {
    .search-result {
        min-width: 25%;
    }
}

